# hls_streamer

./: .gitignore  README.md  compose.yaml  config.yml  debug.yml  pyproject.toml
common/: dependencies.py  helpers.py
common/hdfs/: client.py
common/jobs/: job_executor.py  livestream.py
common/messaging/clients/: base_client.py
common/messaging/clients/rabbit/: client.py  connection.py
common/messaging/handlers/: base.py  ffmpeg.py
common/messaging/listeners/: base_listener.py  rabbit_listener.py
common/messaging/messages/: ffmpeg.py
common/models/: video_chunk.py
converter/: Dockerfile  app.py  pyproject.toml
devops/hadoop/: hadoop.yaml  hdfs_config
devops/keda/: converter_ffmpeg_queue.yaml
devops/services/: converter.yaml  streamer.yaml  transcoder.yaml
streamer/: Dockerfile  app.py  pyproject.toml
streamer/routers/: video.py
streamer/templates/: index.html  live.html
