[tool.poetry]
name = "hls_streamer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ffmpeg-python = "0.2.0"
hdfs = "2.7.3"
argo-workflows = "6.5.4"
PyYAML = "6.0.1"
pika = "1.3.2"
fastapi = "0.109.2"
uvicorn = "^0.27.0.post1"
aio-pika = "^9.4.0"
redis = "^5.0.1"
m3u8 = "^4.0.0"
kubernetes = "^29.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
